--- a/src/content/docs/book/part-2-organised-code/2-organising-code/1-concepts/05-return.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/1-concepts/05-return.mdx
@@ -12,6 +12,7 @@ import sliderReturn04 from './images/slider-return/Slide4.png';
 import sliderReturn05 from './images/slider-return/Slide5.png';
 import sliderReturn06 from './images/slider-return/Slide6.png';
 import sliderReturn07 from './images/slider-return/Slide7.png';
+import sliderReturn08 from './images/slider-return/Slide8.png';
 
 export const sliderReturn = [
   {
@@ -74,12 +75,21 @@ export const sliderReturn = [
   },
   {
     src: sliderReturn07.src,
-    altText: "The caller receives the return value, and the program ends. Here, the shell did not use the value 0 that was returned, but sometimes if you are launching your program from a bash script, you can test the return value and print a message to the screen indicating error or success",
+    altText: "The caller receives the return value, and the program ends",
     tipStart: 7,
     tips: [
       "The caller receives the return value, and the program ends",
-      "Here, the shell did not use the value 0 that was returned, but sometimes if you are launching your program from a bash script, you can test the return value and print a message to the screen indicating error or success"
       
+    ]
+  },
+  {
+    src: sliderReturn08.src,
+    altText: "In bash shell on linux, the built-in environment variable '<strong>$?</strong> contains the status of the last run commmand. We can view this by running an 'echo' statement on the command line which will print the status to the terminal",
+    tipStart: 8,
+    tips: [
+      "In bash shell on linux, the built-in environment variable '<strong>$?</strong>' contains the status of the last run commmand",
+      "We can view this by running an '<code>echo</code>' statement on the command line which will print the status to the terminal",
+      "You can see that the test-return program returned 0 to the shell"
     ]
   }
 ];
