Updated 'Break' statement slideshow

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/05-1-break.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/05-1-break.mdx
@@ -15,6 +15,7 @@ import breakStatementSlide05 from './images/control-flow-statements-in-depth/con
 import breakStatementSlide06 from './images/control-flow-statements-in-depth/control-flow-break-06.png';
 import breakStatementSlide07 from './images/control-flow-statements-in-depth/control-flow-break-07.png';
 import breakStatementSlide08 from './images/control-flow-statements-in-depth/control-flow-break-08.png';
+import breakStatementSlide09 from './images/control-flow-statements-in-depth/control-flow-break-09.png';
 
 import infiniteLoopSlide01 from './images/control-flow-statements-in-depth/control-flow-infinite-loop-01.png';
 import infiniteLoopSlide02 from './images/control-flow-statements-in-depth/control-flow-infinite-loop-02.png';
@@ -161,12 +162,21 @@ export const sliderImagesBreakStatement = [
   },
   {
     src: breakStatementSlide08.src,
-    altText: "The break statement instructs the CPU to terminate the while loop by jumping to the first line of code outside of the while loop. The program then ends.",
-    tipStart: 78,
+    altText: "The break statement instructs the CPU to terminate the while loop by jumping to the first line of code outside of the while loop. The counter increments from lines 11 to 14.",
+    tipStart: 8,
     tips: [
       "The body of the 'if' statement is executed, which in this case contains a single <code>break</code> statement",
-      "The <code>break</code> statement instructs the CPU to <strong>terminate</strong> the <strong>while loop</strong> by jumping to the first line outside of the while loop",
-      "The counter increments from lines 11 to 12 then 13, ending the program"
+      "The <code>break</code> statement instructs the CPU to <strong>terminate</strong> the <strong>while loop</strong> by jumping to the first line of code outside of the while loop",
+      "The counter increments from lines 11 to 14"
+    ]
+  },
+  {
+    src: breakStatementSlide09.src,
+    altText: "The WriteLine() function executes and prints 'Bye' to the terminal. The program counter increments and the program ends",
+    tipStart: 9,
+    tips: [
+      "The <strong>WriteLine()</strong> function executes and prints 'Bye' to the terminal",
+      "The program counter increments and the program ends"
     ]
   }
 ];
