add start of multi-tool build in computer use

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-00-array.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-00-array.mdx
@@ -63,3 +63,9 @@ import imgArrayContiguousMemory from './images/mmv-array-contiguous-memory.png';
 ## Example
 
 We can use arrays to further adjust some of the programs we have been working with so far. We can extend the Fly Catch game, so that the game has a number of flies. In the change calculator we can put our different coins into an array, further simplifying the process of calculating change. In each case, the array lets us easily store a number of values in a single variable.
+
+:::note
+
+Have you wondered why the parts and chapters in the Field Guide start with 0? Now you know 😁.
+
+:::
